# hadd-parallel

./: .gitignore  README.md  index.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeball.yml  python-test.yml
phadd/: phadd.py
