[project]
name = "parallel-hadd"
version = "1.3"
description = "A python package to hadd files in parallel"
license = {text = "MIT License"}
authors = [
    {name = "Mohamed Elashri", email="python@melashri.net"},
    {email = "python@melashri.net"} ]
keywords = [
    "hadd",
    "ROOT",
    "ROOT histogram",
    "Physics",
    "ROOT CERN",
    "Histograms",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License ",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.6, <4"
dependencies = [
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}


[project.urls]
Documentation = "https://github.com/MohamedElashri/hadd-parallel"
Source = "https://github.com/MohamedElashri/hadd-parallel"


[project.optional-dependencies]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
phadd = "phadd.phadd:main"