[metadata]
name = parallel-hadd
version = 1.3
author = Mohamed Elashri
author_email = muhammadelashri@gmail.com
license = MIT
description = A python package to hadd files in parallel
keywords =
    hadd
    ROOT
    ROOT histogram
    Physics
    ROOT CERN
    Histograms
url = https://github.com/MohamedElashri/hadd-parallel
long_description = file: pyproject.toml
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Physics
platforms = any

[options]
packages = phadd
setup_requires = pypandoc; pytest-runner
python_requires = >=3.6, <4
tests_require = pytest

[options.entry_points]
console_scripts = phadd = phadd.phadd:main